# trac2mkdocs

./: .gitignore  README.md  authors.sample.txt  mkdocs.yml  requirements.txt  setup.cfg
src/: trac2mkdocs.py
src/trac2mkdocs/: README.md  trac2mkdocs.py
