[metadata]
name = trac2mkdocs
version = 0.1.0
description = Trac Wiki to MkDocs Markdown converter
author = Hideyuki KATO
author_email = hideyuki@kato.jp
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENSE
url = https://github.com/hkato/trac2mkdocs

[options]
package_dir =
  = src
packages = find:
install_requires =
  GitPython

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  trac2mkdocs = trac2mkdocs.trac2mkdocs:cli